			  its external port, avoiding to get a wrong "Open"
			  state on NATs which change the source port on each
			  request but behave like a Full-Cone otherwise.
			- Made sure a received Kad routing answer doesn't
			  contain more contacts than requested. [Xin Sun]
			- Kad no longer allows more than 2 IPs from the same
			  subnet within one routing query reply (except on LANs).

	iz0bbz:
		* Fixed static linking with GeoIP on MinGW/MSYS.

	Stu Redman:
		* Fix crash on global search on Windows
		* Fix splitter bar position in transfer window not restored properly
		* Caught some insane upload requests
		* Fixed finished files sometimes getting rehashed (thanks to Skolnick)
		* Added restart warning if the ED2K network was re-enabled.
		* Fixed Windows lag when opening preferences dialog
		* Fixed creation of ED2K links with AICH (thanks to Archmage)

	Wuischke:
		* Add Asturian language
		* Updated INSTALL file
		* When EC authentication fails, close connection before we send
		  the response.
		* Tell the user why the EC connection failed.

	Special Thanks To:
		* wires for the strenuous testing on 64-bit

--------------------------------------------------------------------------------

Version 2.2.3 - The "Late Christmas present" version.
----------
2008-12-28

	Alfred:
		* Fixes to compile with Sun Studio 12.

	Gerd78:
		* Fix for linking with a static bfd library.

	GonoszTopi:
		* Fixed improper handling of EC connection failures.
		* Fix for shells not properly handling empty lists.
		* POSIX fixes in shell code.
		* Made not finding GeoIP non-fatal.
		* Check if --enable-geoip-static can be fulfilled.
		* Fixed loading of zipped ipfilter files. Thanks to CtrlAltDel
		  for the investigation of the problem.
		* Fixed alc progress bar for files >4GB.
		* Fixed #1056: amulegui: incorrect results when searching with
		  min size >= 4GB
		* Disable automatic sorting of dowload list while there is a
		  pop-up menu or file detail dialog displayed.